css/style.css
/*
Name: Gyan - Education HTML Template
Author: S. M. Saifullah
Mail: shakil.m.19@gmail.com
Version: 1.0


================
Table of Content
================

Common Sections to all pages

1. Global Style
2. Header Style
3. Nav Style

Home Page Sections

4. Home Banner Style
5. Support Style
6. About Us Style
7. Counter Style
8. Our Courses Style


*/

/*
============
Global Style
============
*/

:root {
  --primary-color: #2d3e50;
  --secondary-color: #fbaa33;
  --text-color-1: #444444;
  --text-color-2: #666666;
  --dark-text-color-1: #222222;
  --dark-text-color-2: #212529;
  --light-text: #999999;
  --bg-color: #f5f5f5;
}

* {
  margin: 0;
  padding: 0;
  outline: none;
  box-sizing: border-box;
}

body {
  font-family: "Arimo", sans-serif;
}

a {
  text-decoration: none;
}

ul,
ol {
  list-style-type: none;
}

h1,
h2,
h3,
h4,
h5,
h6,
p,
nav,
ul,
ol {
  margin: 0;
  padding: 0;
}

.section_heading h2 {
  font-size: 32px;
  font-weight: 500;
  color: var(--primary-color);
  margin-bottom: 25px;
}

.section_heading p {
  font-size: 14px;
  font-weight: 400;
  line-height: 21px;
  color: var(--text-color-2);
}

h3 {
  font-size: 20px;
  font-weight: 700;
  color: var(--text-color-1);
}

h4 {
  font-size: 20px;
  font-weight: 700;
  color: var(--dark-text-color-1);
}

h5 {
  font-size: 15px;
  font-weight: 700;
  line-height: 18px;
  color: var(--text-color-1);
}

a.prime_bg {
  background-color: var(--primary-color);
  transition: 0.5s;
  margin-right: 20px;
  -webkit-transition: 0.5s;
}

a.prime_bg:hover {
  background-color: var(--secondary-color);
}

a.sec_bg {
  background-color: var(--secondary-color);
  transition: 0.5s;
  margin-right: 20px;
  -webkit-transition: 0.5s;
}

a.sec_bg:hover {
  background-color: var(--primary-color);
}

button:focus {
  outline: transparent;
}

/*
============
Header Style
============
*/

header {
  padding: 10px 0;
  background-color: var(--primary-color);
}
header span,
header .h_left,
header .h_left a,
header .h_right a {
  font-size: 14px;
  color: #ffffff;
  transition: 0.4s;
  -webkit-transition: 0.4s;
}

header .h_left span {
  margin-right: 15px;
}

header span i {
  margin-right: 5px;
  transition: 0.3s;
  -webkit-transition: 0.3s;
}

header .h_left span:hover i,
header .h_left a:hover,
header .h_right a:hover {
  color: var(--secondary-color);
}

/*
=========
Nav Style
=========
*/

nav {
  padding: 20px 0 30px !important;
}

nav .navbar-toggler {
  color: rgba(0, 0, 0, 0.5);
  border-color: transparent;
  transition: 0.3s;
  -webkit-transition: 0.3s;
}

nav .navbar-toggler i {
  font-size: 26px;
  line-height: 26px;
}

nav .navbar-toggler:hover,
nav .navbar-toggler:focus {
  color: var(--secondary-color);
}

nav .main_menu {
  text-align: center;
}

nav .main_menu .nav-item {
  margin: 5px 20px;
}

nav .main_menu .nav-item a {
  padding-bottom: 0;
}

nav .main_menu .nav-item a {
  color: var(--primary-color);
  transition: 0.5s;
  -webkit-transition: 0.5s;
}

nav .main_menu .nav-item .active,
nav .main_menu .nav-item a:hover {
  color: var(--secondary-color);
}

nav .get_started {
  padding: 10px 18px;
  border-radius: 7px;
  background-color: var(--secondary-color);
  -webkit-border-radius: 7px;
  cursor: pointer;
  transition: 0.5s;
  -webkit-transition: 0.5s;
}

nav .get_started a {
  font-size: 18px;
  line-height: 27px;
  color: #ffffff;
}

nav .get_started:hover {
  background-color: var(--primary-color);
}

/*
=================
Home Banner Style
=================
*/

.home_slider {
  height: 100vh;
}

.slider_arrows {
  position: relative;
}

#banner .slider_arrows .slider_left_arrow,
#banner .slider_arrows .slider_right_arrow {
  position: absolute;
  top: 50vh;
  height: 60px;
  width: 60px;
  border: 1px solid #ffffff;
  text-align: center !important;
  border-radius: 50%;
  z-index: 1;
  transition: 0.4s;
  -webkit-border-radius: 50%;
  -webkit-transition: 0.4s;
}

#banner .slider_arrows .slider_left_arrow:hover,
#banner .slider_arrows .slider_right_arrow:hover {
  background-color: var(--secondary-color);
  border-color: var(--secondary-color);
}

#banner .slider_arrows .slider_left_arrow {
  left: 40px;
}

#banner .slider_arrows .slider_right_arrow {
  right: 40px;
}

.slider_arrows i {
  font-size: 28px;
  line-height: 60px;
  color: #ffffff;
}

#banner .slide_content {
  background-size: cover;
  background-position: left;
  position: relative;
  z-index: 1;
}

#banner .slide_content::after {
  position: absolute;
  content: "";
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  background-color: rgba(0, 0, 0, 0.4);
  z-index: -1;
}

#banner .container,
#banner .container .row {
  height: 100%;
}

#banner .slide_content {
  height: 100%;
}

#banner .banner_content {
  color: #ffffff;
  margin-top: -70px;
}

#banner .banner_content h1 {
  text-transform: uppercase;
  font-weight: 700;
  font-size: 52px;
  line-height: 62px;
  margin-bottom: 20px;
}

#banner .banner_content h1 span {
  font-size: 40px;
  font-weight: 400;
  line-height: 48px;
}

#banner .banner_content p {
  font-size: 14px;
  margin-bottom: 25px;
}

#banner .banner_content a,
.about_right a,
.enroll_btn a {
  font-size: 20px;
  line-height: 30px;
  color: #ffffff;
  padding: 13px 22px;
  margin-top: 25px;
  display: inline-block;
  border-radius: 7px;
  -webkit-border-radius: 7px;
}

/*
=============
Support Style
=============
*/

#support {
  position: relative;
  transform: translateY(-50%);
  -webkit-transform: translateY(-50%);
}

#support .container {
  background-color: var(--bg-color);
}

.support_item {
  border: 1px solid #dddddd;
  transition: 0.5s;
  -webkit-transition: 0.5s;
}

.support_item:not(:last-of-type) {
  border-right: 2px solid #dddddd;
}

.support_item:hover {
  box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0.3);
}

.support_item img {
  padding-top: 30px;
}

.support_item h2 {
  font-size: 24px;
  color: var(--text-color-1);
  margin: 20px 0;
}

.support_item a {
  display: inline-block;
  margin-bottom: 30px;
  color: var(--light-text);
  transition: 0.4s;
  -webkit-transition: 0.4s;
}

.support_item a:hover {
  color: var(--secondary-color);
}

/*
==============
About Us Style
==============
*/
#home_about {
  padding-bottom: 100px;
}

.about_content {
  margin-top: 55px;
}

.about_left {
  position: relative;
}

.about_slider .slide_item img {
  width: 100%;
  clip-path: polygon(23% 0, 100% 0%, 77% 100%, 0% 100%);
}

.about_left::before,
.about_left::after {
  content: "";
  position: absolute;
  height: 3px;
  width: 100%;
  background-repeat: no-repeat;
  background-size: contain;
}

.about_left::before {
  top: -10px;
  background-image: url(../images/aboutSliderBorderTop.png);
  background-position: left;
}

.about_left::after {
  bottom: -10px;
  right: 10px;
  background-image: url(../images/aboutSliderBorderBottom.png);
  background-position: right;
}

.about_left .slider_dots {
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  bottom: 15px;
  z-index: 2;
  -webkit-transform: translateX(-50%);
}

.about_left .slider_dots button {
  background-color: transparent;
  border: none;
}

.about_left .slider_dots button i {
  font-size: 12px;
  color: var(--light-text);
  border-radius: 50%;
  -webkit-border-radius: 50%;
}

.about_left .slider_dots button + button {
  margin-left: 5px;
}

.about_left .slider_dots button.tns-nav-active i {
  color: var(--secondary-color);
  background-color: var(--secondary-color);
}

.about_right {
  margin-top: 50px;
}

.about_right p {
  font-size: 14px;
  color: var(--text-color-1);
  margin-bottom: 20px;
}

/*
=============
Counter Style
=============
*/

#counter {
  background-image: url(../images/counterPartImage.png);
  background-size: cover;
  background-position: center;
  padding: 40px 0;
}

#counter h2 {
  font-size: 40px;
  font-weight: 700;
  color: #f1f1f1;
}

#counter h4 {
  font-size: 24px;
  font-weight: 400;
  color: #f1f1f1;
  margin: 10px 0 20px;
}

/*
=================
Our Courses Style
=================
*/

#home_course {
  padding: 100px 0;
}

#home_course .container {
  /* padding-left: 0 !important;
  padding-right: 0 !important; */
}

.courses_wrapper {
  position: relative;
  margin-top: 40px;
}

.course_slider_left_arrow i,
.course_slider_right_arrow i {
  font-size: 28px;
  line-height: 60px;
  height: 60px;
  width: 60px;
  color: var(--primary-color);
  border: 1px solid var(--primary-color);
  border-radius: 50%;
  -webkit-border-radius: 50%;
  transition: 0.5s;
  -webkit-transition: 0.5s;
}

.course_slider_left_arrow:hover i,
.course_slider_right_arrow:hover i {
  color: #f1f1f1;
  background-color: var(--secondary-color);
  border-color: var(--secondary-color);
}

.course_slider_left_arrow,
.course_slider_right_arrow {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  -webkit-transform: translateY(-50%);
  z-index: 3;
}

.course_slider_left_arrow {
  left: -50px;
}
.course_slider_right_arrow {
  right: -50px;
}

#home_course .course_item {
  padding: 20px;
  background-color: var(--bg-color);
  transition: 0.5s;
  -webkit-transition: 0.5s;
  position: relative;
}

#home_course .course_item:hover {
  -webkit-box-shadow: 0px 0px 32px -15px rgba(0, 0, 0, 0.43);
  box-shadow: 0px 0px 32px -15px rgba(0, 0, 0, 0.43);
}

#home_course .course_item:hover .course_title h3 {
  color: var(--secondary-color);
}

#home_course .course_item:hover .enroll_btn a {
  background-color: var(--secondary-color);
}

.course_item_wrapper {
  padding: 15px;
  padding-bottom: 30px;
}

.course_thumb {
  position: relative;
}

.course_thumb .row {
  margin: 0;
}

.course_thumb img {
  display: block;
  width: 100%;
}

.course_thumb_overlay {
  position: absolute;
  content: "";
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  background-color: rgba(0, 0, 0, 0.5);
  visibility: hidden;
  opacity: 0;
  transition: 0.5s;
  -webkit-transition: 0.5s;
}

.course_thumb_overlay i {
  color: #f1f1f1;
  font-size: 20px;
  line-height: 40px;
  height: 40px;
  width: 40px;
  text-align: center;
  border-radius: 50%;
  background-color: var(--secondary-color);
  -webkit-border-radius: 50%;
}

.course_thumb:hover .course_thumb_overlay {
  visibility: visible;
  opacity: 1;
}

.course_author {
  margin: 15px 0;
}

.course_author_img img {
  width: 100%;
}

.course_author_name {
  margin-left: -10px;
}

.course_author_name p {
  font-size: 13px;
  color: var(--text-color-1);
  margin-bottom: 5px;
}

.course_author_name h5 {
  font-size: 15px;
  color: var(--text-color-1);
}

.course_author_rating i {
  font-size: 12px;
  color: var(--secondary-color);
  margin-bottom: 7px;
}

.course_author_rating .single_rating {
  font-size: 13px;
  color: var(--light-text);
}

.course_title h3 {
  font-size: 20px;
  color: var(--dark-text-color-1);
  margin: 5px 0 15px;
  transition: 0.5s;
  -webkit-transition: 0.5s;
}

.course_description p {
  font-size: 13px;
  line-height: 26px;
  color: var(--dark-text-color-2);
}

.course_details {
  margin-bottom: 50px;
}

.course_details_heading {
  font-size: 12px;
  color: var(--light-text);
}

.course_details_value {
  font-size: 13px;
  color: var(--text-color-1);
}

.enroll_btn {
  position: absolute;
  bottom: -30px;
  left: 50%;
  transform: translateX(-50%);
  -webkit-transform: translateX(-50%);
}

.enroll_btn a {
  font-size: 16px;
  padding: 13px 20px;
}

